// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Change card snapshots > cancel en 1`] = `
<article
  aria-labelledby="card-title-1 card-title-1-change"
  class="focus-ring flex flex-col rounded-md border border-line bg-surface p-3 gap-1"
  data-card-root="true"
  data-list="needs_reply"
  data-testid="card-1"
  data-trigger-kind="text"
  tabindex="0"
>
  <div
    class="flex items-start gap-2"
  >
    <div
      class="min-w-0 grow"
    >
      <bdi
        class="msg-text block truncate font-semibold"
        data-testid="card-name"
        id="card-title-1"
      >
        +972 55-000-0001
      </bdi>
      <bdi
        class="tnum block text-xs text-text-muted"
        data-testid="card-phone"
        dir="ltr"
      >
        +972 55-000-0001
      </bdi>
    </div>
    <span
      aria-label="Sunday, 20 September 2026 at 11:59"
      class="tnum shrink-0 text-xs text-text-muted"
      data-testid="card-time"
      title="Sunday, 20 September 2026 at 11:59"
    >
      11:59
    </span>
    <div
      class="relative"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="More actions"
        class="icon-btn"
        data-testid="overflow-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            cx="3"
            cy="8"
            r="1.4"
          />
          <circle
            cx="8"
            cy="8"
            r="1.4"
          />
          <circle
            cx="13"
            cy="8"
            r="1.4"
          />
        </svg>
      </button>
    </div>
  </div>
  <span
    class="sr-only"
    id="card-title-1-change"
  >
    change proposed
  </span>
  <div
    class="flex justify-start"
  >
    <div
      class="max-w-full rounded-md rounded-ss-xs px-3 py-2 bg-quote border-s-2 border-accent"
      data-from="contact"
      data-testid="quoted-bubble"
      data-trigger="true"
    >
      <p
        class="msg-text m-0 text-base"
        dir="auto"
        lang="en"
        style="display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden;"
      >
        can we do 5 instead of 3?
      </p>
    </div>
  </div>
  <div
    data-kind="cancel"
    data-testid="change-line-1"
  >
    <p
      class="m-0 text-sm text-text"
      data-kind="cancel"
      data-testid="change-line"
      lang="en"
    >
      <span
        aria-hidden="true"
        data-testid="change-line-visible"
      >
        Cancel: 
        <bdi>
          Meeting
        </bdi>
        , 
        <bdi>
          Wed 15:00
        </bdi>
      </span>
      <span
        class="sr-only"
        data-testid="change-line-sentence"
      >
        Cancel Meeting, Wed 15:00
      </span>
    </p>
  </div>
  <div
    class="flex flex-col gap-1"
  >
    <button
      aria-label="Edit event details"
      class="focus-ring flex w-full items-start gap-2 rounded-sm border bg-surface p-1 text-start border-line"
      data-state="change_proposed"
      data-testid="event-chip"
      type="button"
    >
      <span
        class="flex w-12 shrink-0 flex-col items-center overflow-hidden rounded-xs border border-line-strong"
      >
        <span
          class="w-full text-center text-xs font-semibold bg-accent text-on-accent"
          data-testid="event-chip-weekday"
        >
          Wed
        </span>
        <span
          class="tnum text-lg font-semibold"
          data-testid="event-chip-day"
        >
          30
        </span>
        <span
          class="text-xs text-text-muted"
          data-testid="event-chip-month"
        >
          Sept
        </span>
      </span>
      <span
        class="min-w-0 grow"
      >
        <span
          class="msg-text block truncate font-semibold"
          data-testid="event-chip-title"
          dir="auto"
        >
          Meeting
        </span>
        <span
          class="tnum block text-sm text-text-muted"
          data-testid="event-chip-range"
        >
          ⁨15:00-16:00⁩
        </span>
        <span
          class="msg-text block text-sm text-text-muted"
          data-testid="event-chip-location"
          dir="auto"
        >
          Cafe Noir
        </span>
      </span>
    </button>
  </div>
  <div>
    <div
      class="mt-2 pt-2 border-t border-dashed border-t-line-strong"
      data-label="draft"
      data-testid="draft-block"
    >
      <span
        class="text-xs font-semibold text-text-muted"
        id="_r_64_"
      >
        Draft reply
      </span>
      <textarea
        aria-labelledby="_r_64_"
        class="field msg-text mt-1 block resize-y"
        data-testid="draft-1"
        dir="auto"
        maxlength="600"
        rows="3"
        spellcheck="false"
      >
        Thursday at 17:00 works.
      </textarea>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="grow"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-2 flex flex-wrap items-start gap-2"
  >
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-primary"
        data-primary-approve="true"
        data-testid="approve-send-1"
        type="button"
      >
        Approve & send
      </button>
    </div>
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-outline text-danger"
        data-testid="cancel-event-1"
        type="button"
      >
        Cancel event
      </button>
    </div>
    <button
      class="btn btn-quiet"
      data-testid="keep-event-1"
      type="button"
    >
      Keep it
    </button>
    <button
      aria-live="polite"
      class="btn btn-quiet"
      data-testid="copy-1"
      type="button"
    >
      Copy
    </button>
  </div>
</article>
`;

exports[`Change card snapshots > cancel he 1`] = `
<article
  aria-labelledby="card-title-1 card-title-1-change"
  class="focus-ring flex flex-col rounded-md border border-line bg-surface p-3 gap-1"
  data-card-root="true"
  data-list="needs_reply"
  data-testid="card-1"
  data-trigger-kind="text"
  tabindex="0"
>
  <div
    class="flex items-start gap-2"
  >
    <div
      class="min-w-0 grow"
    >
      <bdi
        class="msg-text block truncate font-semibold"
        data-testid="card-name"
        id="card-title-1"
      >
        +972 55-000-0001
      </bdi>
      <bdi
        class="tnum block text-xs text-text-muted"
        data-testid="card-phone"
        dir="ltr"
      >
        +972 55-000-0001
      </bdi>
    </div>
    <span
      aria-label="יום ראשון, 20 בספטמבר 2026 בשעה 11:59"
      class="tnum shrink-0 text-xs text-text-muted"
      data-testid="card-time"
      title="יום ראשון, 20 בספטמבר 2026 בשעה 11:59"
    >
      11:59
    </span>
    <div
      class="relative"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="פעולות נוספות"
        class="icon-btn"
        data-testid="overflow-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            cx="3"
            cy="8"
            r="1.4"
          />
          <circle
            cx="8"
            cy="8"
            r="1.4"
          />
          <circle
            cx="13"
            cy="8"
            r="1.4"
          />
        </svg>
      </button>
    </div>
  </div>
  <span
    class="sr-only"
    id="card-title-1-change"
  >
    הוצע שינוי
  </span>
  <div
    class="flex justify-start"
  >
    <div
      class="max-w-full rounded-md rounded-ss-xs px-3 py-2 bg-quote border-s-2 border-accent"
      data-from="contact"
      data-testid="quoted-bubble"
      data-trigger="true"
    >
      <p
        class="msg-text m-0 text-base"
        dir="auto"
        lang="en"
        style="display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden;"
      >
        can we do 5 instead of 3?
      </p>
    </div>
  </div>
  <div
    data-kind="cancel"
    data-testid="change-line-1"
  >
    <p
      class="m-0 text-sm text-text"
      data-kind="cancel"
      data-testid="change-line"
      lang="he"
    >
      <span
        aria-hidden="true"
        data-testid="change-line-visible"
      >
        ביטול: 
        <bdi>
          Meeting
        </bdi>
        , 
        <bdi>
          יום רביעי 15:00
        </bdi>
      </span>
      <span
        class="sr-only"
        data-testid="change-line-sentence"
      >
        ביטול Meeting, יום רביעי 15:00
      </span>
    </p>
  </div>
  <div
    class="flex flex-col gap-1"
  >
    <button
      aria-label="עריכת פרטי האירוע"
      class="focus-ring flex w-full items-start gap-2 rounded-sm border bg-surface p-1 text-start border-line"
      data-state="change_proposed"
      data-testid="event-chip"
      type="button"
    >
      <span
        class="flex w-12 shrink-0 flex-col items-center overflow-hidden rounded-xs border border-line-strong"
      >
        <span
          class="w-full text-center text-xs font-semibold bg-accent text-on-accent"
          data-testid="event-chip-weekday"
        >
          יום ד׳
        </span>
        <span
          class="tnum text-lg font-semibold"
          data-testid="event-chip-day"
        >
          30
        </span>
        <span
          class="text-xs text-text-muted"
          data-testid="event-chip-month"
        >
          ספט׳
        </span>
      </span>
      <span
        class="min-w-0 grow"
      >
        <span
          class="msg-text block truncate font-semibold"
          data-testid="event-chip-title"
          dir="auto"
        >
          Meeting
        </span>
        <span
          class="tnum block text-sm text-text-muted"
          data-testid="event-chip-range"
        >
          ⁨15:00-16:00⁩
        </span>
        <span
          class="msg-text block text-sm text-text-muted"
          data-testid="event-chip-location"
          dir="auto"
        >
          Cafe Noir
        </span>
      </span>
    </button>
  </div>
  <div>
    <div
      class="mt-2 pt-2 border-t border-dashed border-t-line-strong"
      data-label="draft"
      data-testid="draft-block"
    >
      <span
        class="text-xs font-semibold text-text-muted"
        id="_r_62_"
      >
        טיוטת תשובה
      </span>
      <textarea
        aria-labelledby="_r_62_"
        class="field msg-text mt-1 block resize-y"
        data-testid="draft-1"
        dir="auto"
        maxlength="600"
        rows="3"
        spellcheck="false"
      >
        Thursday at 17:00 works.
      </textarea>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="grow"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-2 flex flex-wrap items-start gap-2"
  >
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-primary"
        data-primary-approve="true"
        data-testid="approve-send-1"
        type="button"
      >
        אישור ושליחה
      </button>
    </div>
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-outline text-danger"
        data-testid="cancel-event-1"
        type="button"
      >
        ביטול האירוע
      </button>
    </div>
    <button
      class="btn btn-quiet"
      data-testid="keep-event-1"
      type="button"
    >
      להשאיר
    </button>
    <button
      aria-live="polite"
      class="btn btn-quiet"
      data-testid="copy-1"
      type="button"
    >
      העתקה
    </button>
  </div>
</article>
`;

exports[`Change card snapshots > move en 1`] = `
<article
  aria-labelledby="card-title-1 card-title-1-change"
  class="focus-ring flex flex-col rounded-md border border-line bg-surface p-3 gap-1"
  data-card-root="true"
  data-list="needs_reply"
  data-testid="card-1"
  data-trigger-kind="text"
  tabindex="0"
>
  <div
    class="flex items-start gap-2"
  >
    <div
      class="min-w-0 grow"
    >
      <bdi
        class="msg-text block truncate font-semibold"
        data-testid="card-name"
        id="card-title-1"
      >
        +972 55-000-0001
      </bdi>
      <bdi
        class="tnum block text-xs text-text-muted"
        data-testid="card-phone"
        dir="ltr"
      >
        +972 55-000-0001
      </bdi>
    </div>
    <span
      aria-label="Sunday, 20 September 2026 at 11:59"
      class="tnum shrink-0 text-xs text-text-muted"
      data-testid="card-time"
      title="Sunday, 20 September 2026 at 11:59"
    >
      11:59
    </span>
    <div
      class="relative"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="More actions"
        class="icon-btn"
        data-testid="overflow-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            cx="3"
            cy="8"
            r="1.4"
          />
          <circle
            cx="8"
            cy="8"
            r="1.4"
          />
          <circle
            cx="13"
            cy="8"
            r="1.4"
          />
        </svg>
      </button>
    </div>
  </div>
  <span
    class="sr-only"
    id="card-title-1-change"
  >
    change proposed
  </span>
  <div
    class="flex justify-start"
  >
    <div
      class="max-w-full rounded-md rounded-ss-xs px-3 py-2 bg-quote border-s-2 border-accent"
      data-from="contact"
      data-testid="quoted-bubble"
      data-trigger="true"
    >
      <p
        class="msg-text m-0 text-base"
        dir="auto"
        lang="en"
        style="display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden;"
      >
        can we do 5 instead of 3?
      </p>
    </div>
  </div>
  <div
    data-kind="move"
    data-testid="change-line-1"
  >
    <p
      class="m-0 text-sm text-text"
      data-kind="move"
      data-testid="change-line"
      lang="en"
    >
      <span
        aria-hidden="true"
        data-testid="change-line-visible"
      >
        <span>
          Place: 
          <bdi>
            Cafe Noir
          </bdi>
           
        </span>
        <span
          aria-hidden="true"
          class="change-arrow"
          data-testid="change-arrow"
        >
          →
        </span>
        <span>
           
          <bdi>
            Office
          </bdi>
        </span>
      </span>
      <span
        class="sr-only"
        data-testid="change-line-sentence"
      >
        Place change from Cafe Noir to Office
      </span>
    </p>
  </div>
  <div
    class="flex flex-col gap-1"
  >
    <button
      aria-label="Edit event details"
      class="focus-ring flex w-full items-start gap-2 rounded-sm border bg-surface p-1 text-start border-line"
      data-state="change_proposed"
      data-testid="event-chip"
      type="button"
    >
      <span
        class="flex w-12 shrink-0 flex-col items-center overflow-hidden rounded-xs border border-line-strong"
      >
        <span
          class="w-full text-center text-xs font-semibold bg-accent text-on-accent"
          data-testid="event-chip-weekday"
        >
          Wed
        </span>
        <span
          class="tnum text-lg font-semibold"
          data-testid="event-chip-day"
        >
          30
        </span>
        <span
          class="text-xs text-text-muted"
          data-testid="event-chip-month"
        >
          Sept
        </span>
      </span>
      <span
        class="min-w-0 grow"
      >
        <span
          class="msg-text block truncate font-semibold"
          data-testid="event-chip-title"
          dir="auto"
        >
          Meeting
        </span>
        <span
          class="tnum block text-sm text-text-muted"
          data-testid="event-chip-range"
        >
          ⁨15:00-16:00⁩
        </span>
        <span
          class="msg-text block text-sm text-text-muted"
          data-testid="event-chip-location"
          dir="auto"
        >
          Office
        </span>
      </span>
    </button>
  </div>
  <div>
    <div
      class="mt-2 pt-2 border-t border-dashed border-t-line-strong"
      data-label="draft"
      data-testid="draft-block"
    >
      <span
        class="text-xs font-semibold text-text-muted"
        id="_r_60_"
      >
        Draft reply
      </span>
      <textarea
        aria-labelledby="_r_60_"
        class="field msg-text mt-1 block resize-y"
        data-testid="draft-1"
        dir="auto"
        maxlength="600"
        rows="3"
        spellcheck="false"
      >
        Thursday at 17:00 works.
      </textarea>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="grow"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-2 flex flex-wrap items-start gap-2"
  >
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-primary"
        data-primary-approve="true"
        data-testid="approve-send-1"
        type="button"
      >
        Approve & send
      </button>
    </div>
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-outline"
        data-testid="approve-change-1"
        type="button"
      >
        Approve change
      </button>
    </div>
    <button
      class="btn btn-quiet"
      data-testid="keep-change-1"
      type="button"
    >
      Keep the old place
    </button>
    <button
      aria-live="polite"
      class="btn btn-quiet"
      data-testid="copy-1"
      type="button"
    >
      Copy
    </button>
  </div>
</article>
`;

exports[`Change card snapshots > move he 1`] = `
<article
  aria-labelledby="card-title-1 card-title-1-change"
  class="focus-ring flex flex-col rounded-md border border-line bg-surface p-3 gap-1"
  data-card-root="true"
  data-list="needs_reply"
  data-testid="card-1"
  data-trigger-kind="text"
  tabindex="0"
>
  <div
    class="flex items-start gap-2"
  >
    <div
      class="min-w-0 grow"
    >
      <bdi
        class="msg-text block truncate font-semibold"
        data-testid="card-name"
        id="card-title-1"
      >
        +972 55-000-0001
      </bdi>
      <bdi
        class="tnum block text-xs text-text-muted"
        data-testid="card-phone"
        dir="ltr"
      >
        +972 55-000-0001
      </bdi>
    </div>
    <span
      aria-label="יום ראשון, 20 בספטמבר 2026 בשעה 11:59"
      class="tnum shrink-0 text-xs text-text-muted"
      data-testid="card-time"
      title="יום ראשון, 20 בספטמבר 2026 בשעה 11:59"
    >
      11:59
    </span>
    <div
      class="relative"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="פעולות נוספות"
        class="icon-btn"
        data-testid="overflow-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            cx="3"
            cy="8"
            r="1.4"
          />
          <circle
            cx="8"
            cy="8"
            r="1.4"
          />
          <circle
            cx="13"
            cy="8"
            r="1.4"
          />
        </svg>
      </button>
    </div>
  </div>
  <span
    class="sr-only"
    id="card-title-1-change"
  >
    הוצע שינוי
  </span>
  <div
    class="flex justify-start"
  >
    <div
      class="max-w-full rounded-md rounded-ss-xs px-3 py-2 bg-quote border-s-2 border-accent"
      data-from="contact"
      data-testid="quoted-bubble"
      data-trigger="true"
    >
      <p
        class="msg-text m-0 text-base"
        dir="auto"
        lang="en"
        style="display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden;"
      >
        can we do 5 instead of 3?
      </p>
    </div>
  </div>
  <div
    data-kind="move"
    data-testid="change-line-1"
  >
    <p
      class="m-0 text-sm text-text"
      data-kind="move"
      data-testid="change-line"
      lang="he"
    >
      <span
        aria-hidden="true"
        data-testid="change-line-visible"
      >
        <span>
          מקום: 
          <bdi>
            Cafe Noir
          </bdi>
           
        </span>
        <span
          aria-hidden="true"
          class="change-arrow"
          data-testid="change-arrow"
        >
          ←
        </span>
        <span>
           
          <bdi>
            Office
          </bdi>
        </span>
      </span>
      <span
        class="sr-only"
        data-testid="change-line-sentence"
      >
        שינוי מקום: Office במקום Cafe Noir
      </span>
    </p>
  </div>
  <div
    class="flex flex-col gap-1"
  >
    <button
      aria-label="עריכת פרטי האירוע"
      class="focus-ring flex w-full items-start gap-2 rounded-sm border bg-surface p-1 text-start border-line"
      data-state="change_proposed"
      data-testid="event-chip"
      type="button"
    >
      <span
        class="flex w-12 shrink-0 flex-col items-center overflow-hidden rounded-xs border border-line-strong"
      >
        <span
          class="w-full text-center text-xs font-semibold bg-accent text-on-accent"
          data-testid="event-chip-weekday"
        >
          יום ד׳
        </span>
        <span
          class="tnum text-lg font-semibold"
          data-testid="event-chip-day"
        >
          30
        </span>
        <span
          class="text-xs text-text-muted"
          data-testid="event-chip-month"
        >
          ספט׳
        </span>
      </span>
      <span
        class="min-w-0 grow"
      >
        <span
          class="msg-text block truncate font-semibold"
          data-testid="event-chip-title"
          dir="auto"
        >
          Meeting
        </span>
        <span
          class="tnum block text-sm text-text-muted"
          data-testid="event-chip-range"
        >
          ⁨15:00-16:00⁩
        </span>
        <span
          class="msg-text block text-sm text-text-muted"
          data-testid="event-chip-location"
          dir="auto"
        >
          Office
        </span>
      </span>
    </button>
  </div>
  <div>
    <div
      class="mt-2 pt-2 border-t border-dashed border-t-line-strong"
      data-label="draft"
      data-testid="draft-block"
    >
      <span
        class="text-xs font-semibold text-text-muted"
        id="_r_5u_"
      >
        טיוטת תשובה
      </span>
      <textarea
        aria-labelledby="_r_5u_"
        class="field msg-text mt-1 block resize-y"
        data-testid="draft-1"
        dir="auto"
        maxlength="600"
        rows="3"
        spellcheck="false"
      >
        Thursday at 17:00 works.
      </textarea>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="grow"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-2 flex flex-wrap items-start gap-2"
  >
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-primary"
        data-primary-approve="true"
        data-testid="approve-send-1"
        type="button"
      >
        אישור ושליחה
      </button>
    </div>
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-outline"
        data-testid="approve-change-1"
        type="button"
      >
        אישור השינוי
      </button>
    </div>
    <button
      class="btn btn-quiet"
      data-testid="keep-change-1"
      type="button"
    >
      להשאיר את המקום הקודם
    </button>
    <button
      aria-live="polite"
      class="btn btn-quiet"
      data-testid="copy-1"
      type="button"
    >
      העתקה
    </button>
  </div>
</article>
`;

exports[`Change card snapshots > reschedule en 1`] = `
<article
  aria-labelledby="card-title-1 card-title-1-change"
  class="focus-ring flex flex-col rounded-md border border-line bg-surface p-3 gap-1"
  data-card-root="true"
  data-list="needs_reply"
  data-testid="card-1"
  data-trigger-kind="text"
  tabindex="0"
>
  <div
    class="flex items-start gap-2"
  >
    <div
      class="min-w-0 grow"
    >
      <bdi
        class="msg-text block truncate font-semibold"
        data-testid="card-name"
        id="card-title-1"
      >
        +972 55-000-0001
      </bdi>
      <bdi
        class="tnum block text-xs text-text-muted"
        data-testid="card-phone"
        dir="ltr"
      >
        +972 55-000-0001
      </bdi>
    </div>
    <span
      aria-label="Sunday, 20 September 2026 at 11:59"
      class="tnum shrink-0 text-xs text-text-muted"
      data-testid="card-time"
      title="Sunday, 20 September 2026 at 11:59"
    >
      11:59
    </span>
    <div
      class="relative"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="More actions"
        class="icon-btn"
        data-testid="overflow-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            cx="3"
            cy="8"
            r="1.4"
          />
          <circle
            cx="8"
            cy="8"
            r="1.4"
          />
          <circle
            cx="13"
            cy="8"
            r="1.4"
          />
        </svg>
      </button>
    </div>
  </div>
  <span
    class="sr-only"
    id="card-title-1-change"
  >
    change proposed
  </span>
  <div
    class="flex justify-start"
  >
    <div
      class="max-w-full rounded-md rounded-ss-xs px-3 py-2 bg-quote border-s-2 border-accent"
      data-from="contact"
      data-testid="quoted-bubble"
      data-trigger="true"
    >
      <p
        class="msg-text m-0 text-base"
        dir="auto"
        lang="en"
        style="display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden;"
      >
        can we do 5 instead of 3?
      </p>
    </div>
  </div>
  <div
    data-kind="reschedule"
    data-testid="change-line-1"
  >
    <p
      class="m-0 text-sm text-text"
      data-kind="reschedule"
      data-testid="change-line"
      lang="en"
    >
      <span
        aria-hidden="true"
        data-testid="change-line-visible"
      >
        <span>
          Change: 
          <bdi>
            Wed 15:00
          </bdi>
           
        </span>
        <span
          aria-hidden="true"
          class="change-arrow"
          data-testid="change-arrow"
        >
          →
        </span>
        <span>
           
          <bdi>
            17:00
          </bdi>
        </span>
      </span>
      <span
        class="sr-only"
        data-testid="change-line-sentence"
      >
        Change from Wednesday 15:00 to 17:00
      </span>
    </p>
  </div>
  <div
    class="flex flex-col gap-1"
  >
    <button
      aria-label="Edit event details"
      class="focus-ring flex w-full items-start gap-2 rounded-sm border bg-surface p-1 text-start border-line"
      data-state="change_proposed"
      data-testid="event-chip"
      type="button"
    >
      <span
        class="flex w-12 shrink-0 flex-col items-center overflow-hidden rounded-xs border border-line-strong"
      >
        <span
          class="w-full text-center text-xs font-semibold bg-accent text-on-accent"
          data-testid="event-chip-weekday"
        >
          Wed
        </span>
        <span
          class="tnum text-lg font-semibold"
          data-testid="event-chip-day"
        >
          30
        </span>
        <span
          class="text-xs text-text-muted"
          data-testid="event-chip-month"
        >
          Sept
        </span>
      </span>
      <span
        class="min-w-0 grow"
      >
        <span
          class="msg-text block truncate font-semibold"
          data-testid="event-chip-title"
          dir="auto"
        >
          Meeting
        </span>
        <span
          class="tnum block text-sm text-text-muted"
          data-testid="event-chip-range"
        >
          ⁨17:00-18:00⁩
        </span>
        <span
          class="msg-text block text-sm text-text-muted"
          data-testid="event-chip-location"
          dir="auto"
        >
          Cafe Noir
        </span>
      </span>
    </button>
  </div>
  <div>
    <div
      class="mt-2 pt-2 border-t border-dashed border-t-line-strong"
      data-label="draft"
      data-testid="draft-block"
    >
      <span
        class="text-xs font-semibold text-text-muted"
        id="_r_5s_"
      >
        Draft reply
      </span>
      <textarea
        aria-labelledby="_r_5s_"
        class="field msg-text mt-1 block resize-y"
        data-testid="draft-1"
        dir="auto"
        maxlength="600"
        rows="3"
        spellcheck="false"
      >
        Thursday at 17:00 works.
      </textarea>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="grow"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-2 flex flex-wrap items-start gap-2"
  >
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-primary"
        data-primary-approve="true"
        data-testid="approve-send-1"
        type="button"
      >
        Approve & send
      </button>
    </div>
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-outline"
        data-testid="approve-change-1"
        type="button"
      >
        Approve change
      </button>
    </div>
    <button
      class="btn btn-quiet"
      data-testid="keep-change-1"
      type="button"
    >
      Keep 15:00
    </button>
    <button
      aria-live="polite"
      class="btn btn-quiet"
      data-testid="copy-1"
      type="button"
    >
      Copy
    </button>
  </div>
</article>
`;

exports[`Change card snapshots > reschedule he 1`] = `
<article
  aria-labelledby="card-title-1 card-title-1-change"
  class="focus-ring flex flex-col rounded-md border border-line bg-surface p-3 gap-1"
  data-card-root="true"
  data-list="needs_reply"
  data-testid="card-1"
  data-trigger-kind="text"
  tabindex="0"
>
  <div
    class="flex items-start gap-2"
  >
    <div
      class="min-w-0 grow"
    >
      <bdi
        class="msg-text block truncate font-semibold"
        data-testid="card-name"
        id="card-title-1"
      >
        +972 55-000-0001
      </bdi>
      <bdi
        class="tnum block text-xs text-text-muted"
        data-testid="card-phone"
        dir="ltr"
      >
        +972 55-000-0001
      </bdi>
    </div>
    <span
      aria-label="יום ראשון, 20 בספטמבר 2026 בשעה 11:59"
      class="tnum shrink-0 text-xs text-text-muted"
      data-testid="card-time"
      title="יום ראשון, 20 בספטמבר 2026 בשעה 11:59"
    >
      11:59
    </span>
    <div
      class="relative"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="פעולות נוספות"
        class="icon-btn"
        data-testid="overflow-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            cx="3"
            cy="8"
            r="1.4"
          />
          <circle
            cx="8"
            cy="8"
            r="1.4"
          />
          <circle
            cx="13"
            cy="8"
            r="1.4"
          />
        </svg>
      </button>
    </div>
  </div>
  <span
    class="sr-only"
    id="card-title-1-change"
  >
    הוצע שינוי
  </span>
  <div
    class="flex justify-start"
  >
    <div
      class="max-w-full rounded-md rounded-ss-xs px-3 py-2 bg-quote border-s-2 border-accent"
      data-from="contact"
      data-testid="quoted-bubble"
      data-trigger="true"
    >
      <p
        class="msg-text m-0 text-base"
        dir="auto"
        lang="en"
        style="display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 3; overflow: hidden;"
      >
        can we do 5 instead of 3?
      </p>
    </div>
  </div>
  <div
    data-kind="reschedule"
    data-testid="change-line-1"
  >
    <p
      class="m-0 text-sm text-text"
      data-kind="reschedule"
      data-testid="change-line"
      lang="he"
    >
      <span
        aria-hidden="true"
        data-testid="change-line-visible"
      >
        <span>
          שינוי: 
          <bdi>
            יום רביעי 15:00
          </bdi>
           
        </span>
        <span
          aria-hidden="true"
          class="change-arrow"
          data-testid="change-arrow"
        >
          ←
        </span>
        <span>
           
          <bdi>
            17:00
          </bdi>
        </span>
      </span>
      <span
        class="sr-only"
        data-testid="change-line-sentence"
      >
        שינוי: 17:00 במקום יום רביעי 15:00
      </span>
    </p>
  </div>
  <div
    class="flex flex-col gap-1"
  >
    <button
      aria-label="עריכת פרטי האירוע"
      class="focus-ring flex w-full items-start gap-2 rounded-sm border bg-surface p-1 text-start border-line"
      data-state="change_proposed"
      data-testid="event-chip"
      type="button"
    >
      <span
        class="flex w-12 shrink-0 flex-col items-center overflow-hidden rounded-xs border border-line-strong"
      >
        <span
          class="w-full text-center text-xs font-semibold bg-accent text-on-accent"
          data-testid="event-chip-weekday"
        >
          יום ד׳
        </span>
        <span
          class="tnum text-lg font-semibold"
          data-testid="event-chip-day"
        >
          30
        </span>
        <span
          class="text-xs text-text-muted"
          data-testid="event-chip-month"
        >
          ספט׳
        </span>
      </span>
      <span
        class="min-w-0 grow"
      >
        <span
          class="msg-text block truncate font-semibold"
          data-testid="event-chip-title"
          dir="auto"
        >
          Meeting
        </span>
        <span
          class="tnum block text-sm text-text-muted"
          data-testid="event-chip-range"
        >
          ⁨17:00-18:00⁩
        </span>
        <span
          class="msg-text block text-sm text-text-muted"
          data-testid="event-chip-location"
          dir="auto"
        >
          Cafe Noir
        </span>
      </span>
    </button>
  </div>
  <div>
    <div
      class="mt-2 pt-2 border-t border-dashed border-t-line-strong"
      data-label="draft"
      data-testid="draft-block"
    >
      <span
        class="text-xs font-semibold text-text-muted"
        id="_r_5q_"
      >
        טיוטת תשובה
      </span>
      <textarea
        aria-labelledby="_r_5q_"
        class="field msg-text mt-1 block resize-y"
        data-testid="draft-1"
        dir="auto"
        maxlength="600"
        rows="3"
        spellcheck="false"
      >
        Thursday at 17:00 works.
      </textarea>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="grow"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-2 flex flex-wrap items-start gap-2"
  >
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-primary"
        data-primary-approve="true"
        data-testid="approve-send-1"
        type="button"
      >
        אישור ושליחה
      </button>
    </div>
    <div
      class="flex min-w-0 grow flex-col"
    >
      <button
        class="btn btn-outline"
        data-testid="approve-change-1"
        type="button"
      >
        אישור השינוי
      </button>
    </div>
    <button
      class="btn btn-quiet"
      data-testid="keep-change-1"
      type="button"
    >
      להשאיר ב-15:00
    </button>
    <button
      aria-live="polite"
      class="btn btn-quiet"
      data-testid="copy-1"
      type="button"
    >
      העתקה
    </button>
  </div>
</article>
`;
